<resources>
    <string name="app_name">Github User</string>
    <string name="github_app">Github App</string>
    <string name="github_name">Github Users</string>
    <string name="images_github">images_github</string>
    <string name="wave">wave</string>
    <string name="welcome">Welcome to Github App\nPlease search the username\nto show list from github users</string>
    <string name="username">username</string>
    <string name="company">company</string>
    <string name="search">search</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="_24">24</string>
    <string name="_1000">1000</string>
    <string name="_255">255</string>
    <string name="name">name</string>
    <string name="location">location</string>
    <string name="new_york">New York</string>
    <string name="google">Google</string>

    <string name="code_401">The connection is not good</string>
    <string name="code_403">Please try again later</string>
    <string name="code_404">Not Found</string>

    <string name="tab_following">Following</string>
    <string name="tab_followers">Followers</string>
    <string name="fab_button">fab button</string>
    <string name="favorite">favorite</string>
    <string name="settings">settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="added_favorite">Added to Favorite</string>
    <string name="removed_favorite">Removed from Favorite</string>
    <string name="empty_data">There\'s no data currently</string>
    <string name="favorite_users">Favorite Users</string>
    <string name="settings_activity">Settings</string>
    <string name="enable_alarm">Enable Alarm</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="language">Language</string>
    <string name="enable_alarm_in_9am">Enable Alarm in 09:00</string>
    <string name="favorite_detail">favorite_detail</string>

    <string name="github_reminder">Github Reminder</string>
    <string name="github_message">Github App Waiting You!</string>
    <string name="alarm_on">Alarm is On</string>
    <string name="alarm_off">Alarm is Off</string>

</resources>