<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/black_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_repository_count"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="48dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/_24"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tv_repository"
            app:layout_constraintStart_toEndOf="@+id/circleImageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.815" />

        <TextView
            android:id="@+id/tv_repository"
            android:layout_width="72dp"
            android:layout_height="18dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/repository"
            android:textAlignment="center"
            android:textColor="@color/gray_white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/circleImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_followers_count"
            android:layout_width="32dp"
            android:layout_height="20dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/_1000"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tv_followers"
            app:layout_constraintStart_toEndOf="@+id/tv_repository_count"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_followers"
            android:layout_width="72dp"
            android:layout_height="18dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/followers"
            android:textAlignment="center"
            android:textColor="@color/gray_white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/tv_repository"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_following_count"
            android:layout_width="32dp"
            android:layout_height="20dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/_255"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tv_following"
            app:layout_constraintStart_toEndOf="@+id/tv_followers_count"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="72dp"
            android:layout_height="18dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/following"
            android:textAlignment="center"
            android:textColor="@color/gray_white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/tv_followers"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/location"
            android:src="@drawable/ic_place_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/new_york"
            android:textColor="@color/gray_light"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/company"
            android:src="@drawable/ic_company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:text="@string/google"
            android:textColor="@color/gray_light"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/tv_company" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/fab_button"
            android:focusable="true"
            android:src="@drawable/ic_favorite_border"
            app:backgroundTint="@color/light_gray"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>